--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,106 @@
-
+absl-py==2.2.2
+appnope==0.1.4
+APScheduler==3.6.3
+asttokens==3.0.0
+astunparse==1.6.3
+audioread==3.0.1
+cachetools==4.2.2
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+executing==2.2.0
+fastdtw==0.3.4
+flatbuffers==25.2.10
+fonttools==4.58.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.71.0
+h5py==3.13.0
+idna==3.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+joblib==1.5.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kapre==0.3.7
+keras==3.9.2
+kiwisolver==1.4.8
+lazy_loader==0.4
+libclang==18.1.1
+librosa==0.11.0
+llvmlite==0.44.0
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml_dtypes==0.5.1
+moviepy==2.1.2
+msgpack==1.1.0
+namex==0.0.9
+nest-asyncio==1.6.0
+networkx==3.4.2
+numba==0.61.2
+numpy==2.1.3
+openl3==0.4.2
+opt_einsum==3.4.0
+optree==0.15.0
+packaging==25.0
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.3.8
+pooch==1.8.2
+proglog==0.1.12
+prompt_toolkit==3.0.51
+protobuf==5.29.4
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycparser==2.22
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-telegram-bot==13.15
+pytz==2025.2
+pyzmq==26.4.0
+requests==2.32.3
+resampy==0.2.2
+rich==14.0.0
+scikit-image==0.25.2
+scikit-learn==1.6.1
+scipy==1.15.3
+seaborn==0.13.2
+six==1.17.0
+soundfile==0.13.1
+soxr==0.5.0.post1
+stack-data==0.6.3
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.1.0
+threadpoolctl==3.6.0
+tifffile==2025.5.10
+tornado==6.1
+tqdm==4.67.1
+traitlets==5.14.3
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+wcwidth==0.2.13
+Werkzeug==3.1.3
+wrapt==1.17.2
