--- a/Telegram-bot/requirements.txt
+++ b/Telegram-bot/requirements.txt
@@ -1,2 +1,5 @@
+# This file contains the dependencies for the Telegram bot project.
 python-telegram-bot==13.15
 python-dotenv
+gspread
+oauth2client
