--- a/Telegram-bot/requirements.txt
+++ b/Telegram-bot/requirements.txt
@@ -3,3 +3,7 @@ python-telegram-bot==13.15
 python-dotenv
 gspread
 oauth2client
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
